Entities katmanında Models'daki Address ve AppUser class'larına ufak annotations eklendi. Map katmanına AddressMap - AppUserMap - AttributeMap - BaseMap eklendi.

--- a/Project.MAP/Project.MAP.csproj
+++ b/Project.MAP/Project.MAP.csproj
@@ -51,11 +51,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Options\AddressMap.cs" />
+    <Compile Include="Options\AppUserMap.cs" />
+    <Compile Include="Options\AttributeMap.cs" />
+    <Compile Include="Options\BaseMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Project.ENTITIES\Project.ENTITIES.csproj">
+      <Project>{D0728F2C-6C30-44C9-AC69-D67C091DB5BC}</Project>
+      <Name>Project.ENTITIES</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
