Üye olurken anonim resim ataması yapıldı

--- a/Project.MVCUI/Project.MVCUI.csproj
+++ b/Project.MVCUI/Project.MVCUI.csproj
@@ -1758,6 +1758,7 @@
     <Content Include="Pictures\anakartUrun2.jpg" />
     <Content Include="Pictures\anakartUrun3.jpg" />
     <Content Include="Pictures\anakartUrun4.jpg" />
+    <Content Include="Pictures\anonim.png" />
     <Content Include="Pictures\ekranKartıUrun.jpg" />
     <Content Include="Pictures\ekranKartıUrun1.jpg" />
     <Content Include="Pictures\ekranKartıUrun2.jpg" />
