--- a/Project.MVCUI/Project.MVCUI.csproj
+++ b/Project.MVCUI/Project.MVCUI.csproj
@@ -1795,6 +1795,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ShoppingTools\Cart.cs" />
+    <Compile Include="Models\ShoppingTools\CartItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VMClasses\AppUserVM.cs" />
     <Compile Include="VMClasses\ProductVM.cs" />
@@ -1980,7 +1982,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
     <Folder Include="OuterTools\assets\jquery-file-upload\server\php\files\thumbnail\" />
   </ItemGroup>
   <ItemGroup>
