ShoppingList View'u ayarlanıyor

--- a/Project.MVCUI/Views/web.config
+++ b/Project.MVCUI/Views/web.config
@@ -19,6 +19,8 @@
         <add namespace="Project.MVCUI" />
         <add namespace="Project.MVCUI.VMClasses" />
         <add namespace="Project.ENTITIES.Models" />
+        <add namespace="PagedList.Mvc" />
+        <add namespace="Project.MVCUI.Models.ShoppingTools" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
