--- a/Project.MVCUI/packages.config
+++ b/Project.MVCUI/packages.config
@@ -11,5 +11,7 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.12" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net472" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
   <package id="WebApiRestService.WebApiClient" version="1.1" targetFramework="net472" />
 </packages>
