--- a/Project.MVCUI/Views/web.config
+++ b/Project.MVCUI/Views/web.config
@@ -21,6 +21,7 @@
         <add namespace="Project.ENTITIES.Models" />
         <add namespace="PagedList.Mvc" />
         <add namespace="Project.MVCUI.Models.ShoppingTools" />
+        <add namespace="Project.DTO.Models" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
