--- a/Project.MVCUI/Project.MVCUI.csproj
+++ b/Project.MVCUI/Project.MVCUI.csproj
@@ -1813,6 +1813,7 @@
     <Compile Include="Areas\Admin\Controllers\ProductController.cs" />
     <Compile Include="Controllers\AddressController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\RegisterController.cs" />
     <Compile Include="Controllers\ShoppingController.cs" />
     <Compile Include="Global.asax.cs">
@@ -2005,14 +2006,14 @@
     <Content Include="Views\Shopping\ProductDetail.cshtml" />
     <Content Include="Views\Shopping\CardPage.cshtml" />
     <Content Include="Views\Shopping\ConfirmOrder.cshtml" />
-    <Content Include="Views\Home\ProfileDetail.cshtml" />
-    <Content Include="Views\Home\EditProfile.cshtml" />
     <Content Include="Views\Address\Addresses.cshtml" />
     <Content Include="Views\Address\AddAddress.cshtml" />
     <Content Include="Views\Address\UpdateAddress.cshtml" />
     <Content Include="Views\Home\CargoTracking.cshtml" />
     <Content Include="Views\Home\ForgetPassword.cshtml" />
     <Content Include="Views\Home\ChangePassword.cshtml" />
+    <Content Include="Views\Profile\ProfileDetail.cshtml" />
+    <Content Include="Views\Profile\EditProfile.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
