--- a/Project.MVCUI/Web.config
+++ b/Project.MVCUI/Web.config
@@ -12,10 +12,10 @@
   <connectionStrings>
 
     <!--MSSQL'e, SQL Server Authentication ile bağlantı kurmamızı sağlapan xml tag'im-->
-    <add name="MyConnection" connectionString="server=.;database=TeknolojiSirketi;uid=sa;pwd=123" providerName="System.Data.SqlClient" />
+   <!-- <add name="MyConnection" connectionString="server=.;database=TeknolojiSirketi;uid=sa;pwd=123" providerName="System.Data.SqlClient" />-->
 
     <!--MSSQL'e, Windows Authentication ile bağlantı kurmamızı sağlayan xml tag'im-->
-    <!--<add name="MyAutConnection" connectionString="server=.;database=TeknolojiSirketi;integrated securty=true;" providerName="System.Data.SqlClient" />-->
+    <add name="MyAutConnection" connectionString="server=.;database=TeknolojiSirketi;integrated security=true;" providerName="System.Data.SqlClient" />
     
   </connectionStrings>
   
