--- a/Project.MVCUI/Project.MVCUI.csproj
+++ b/Project.MVCUI/Project.MVCUI.csproj
@@ -1776,6 +1776,13 @@
     <Content Include="Pictures\islemciUrun2.jpg" />
     <Content Include="Pictures\islemciUrun3.jpg" />
     <Content Include="Pictures\islemciUrun4.jpg" />
+    <Content Include="Pictures\kasa\1.jpg" />
+    <Content Include="Pictures\kasa\2.jpg" />
+    <Content Include="Pictures\kasa\3.jpg" />
+    <Content Include="Pictures\kasa\4.jpg" />
+    <Content Include="Pictures\kasa\5.jpg" />
+    <Content Include="Pictures\kasa\6.jpg" />
+    <Content Include="Pictures\mamo.jpg" />
     <Content Include="Pictures\ramUrun.jpg" />
     <Content Include="Pictures\ramUrun1.jpg" />
     <Content Include="Pictures\ramUrun2.jpg" />
@@ -1796,6 +1803,18 @@
     <Content Include="Areas\Admin\Views\Category\UpdateCategory.cshtml" />
     <Content Include="Areas\Admin\Views\Authority\UserList.cshtml" />
     <None Include="Scripts\jquery-1.8.0.intellisense.js" />
+    <Content Include="Pictures\sogutucu\1.jpg" />
+    <Content Include="Pictures\sogutucu\2.jpg" />
+    <Content Include="Pictures\sogutucu\3.jpg" />
+    <Content Include="Pictures\sogutucu\4.jpg" />
+    <Content Include="Pictures\sogutucu\5.jpg" />
+    <Content Include="Pictures\sogutucu\6.jpg" />
+    <Content Include="Pictures\ssd\1.jpg" />
+    <Content Include="Pictures\ssd\2.jpg" />
+    <Content Include="Pictures\ssd\3.jpg" />
+    <Content Include="Pictures\ssd\4.jpg" />
+    <Content Include="Pictures\ssd\5.jpg" />
+    <Content Include="Pictures\ssd\6.jpg" />
     <Content Include="Scripts\jquery-1.8.0.js" />
     <Content Include="Scripts\jquery-1.8.0.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
