--- a/Project.MVCUI/Web.config
+++ b/Project.MVCUI/Web.config
@@ -15,7 +15,7 @@
    <!-- <add name="MyConnection" connectionString="server=.;database=TeknolojiSirketi;uid=sa;pwd=123" providerName="System.Data.SqlClient" />-->
 
     <!--MSSQL'e, Windows Authentication ile bağlantı kurmamızı sağlayan xml tag'im-->
-    <add name="MyAutConnection" connectionString="server=.;database=TeknolojiSirketi;integrated security=true;" providerName="System.Data.SqlClient" />
+    <add name="MyAutConnection" connectionString="server=DESKTOP-1FAHVK3\SQL2016;database=TeknolojiSirketi;integrated security=true;" providerName="System.Data.SqlClient" />
     
   </connectionStrings>
   
